--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,11 +4,16 @@
   android:orientation="vertical">
 
   <include layout="@layout/common_top"/>
+  <com.p2pmoney.ui.MyScrollview
+    android:id="@+id/myscrollview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
   <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="首页"
     android:textColor="@android:color/holo_red_dark"
     android:textSize="40sp"/>
+  </com.p2pmoney.ui.MyScrollview>
 
 </LinearLayout>
